Se realizan correcciones en enlace a Islas Maldivas

--- a/Grecia.html
+++ b/Grecia.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="Islandia.html">Islandia</a></li>
-                    <li><a href="Islas Maldivas.html">Islas Maldivas</a></li>
+                    <li><a href="Maldivas.html">Islas Maldivas</a></li>
                     <li><a href="Italia.html">Italia</a></li>
                     <li><a href="Mexico.html">México</a></li>
                     <li><a href="Francia.html">Francia</a></li>
