--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="Greacia.html">
+                            <a href="Grecia.html">
                                 <figure><img src="https://lonelyplanetes.cdnstatics2.com/sites/default/files/styles/max_1300x1300/public/fotos/Grecia_Santorini_Oia_GettyRF_510967662_Grafissimo_Getty%20Images.jpg?itok=kqGJXJOb"
                                     alt="Imagen de Grecia no encontrada"  width="200" height="100">
                                     <figcaption>Grecia.</figcaption>
